app/Home/Home.css
.Home {
  position: relative;
  height: 100%;
}

.Home-shadow {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: transparent;
  pointer-events: none;

}
.Home-shadow.is-show {
  display: none;
}
.Home-cover {
  width: 100%;
  padding: 30px 0 10px 0;
  border-bottom: 1px solid gray;
}
.Home-cover.is-hide {
    display: none;
}
.Home-AppBar.is-hide {
    display: none;
}
.Home-footer.is-hide {
    display: none;
}
.Home-coverImg {
    width: 100%;
}
.Home-coverNotice {
    font-size: 13px;
    color: rgb(183,185,184);
    margin: 0 auto;
    padding: 10px 12px 4px 16px;
}
.Home-docLink, .Home-docLink:visited {
    display: block;
    text-decoration: none;
    color: rgb(53,55,54);
    padding-right: 3px;
    margin-bottom: 10px;
}
.Home-docLink:hover {
    text-decoration: underline;
}
.Home-main {
    position: relative;
}
.Home-filter {
    display: none;
}
.Home-schedule {
    display: block;
    z-index: 10;
}
.Home-schedule.is-fixed, .Home-schedule.with-session {
    display: block;
    -webkit-transition: all .2s cubic-bezier(.4,0,.2,1); 
    transition: all .2s cubic-bezier(.4,0,.2,1); 
}
.Home-schedule.with-session.is-hide {
    display: none;

}
.Home-sponsor {
    display: block;
}
.Home-sponsor.is-hide {
    display: none;
}
.Home-session {
    position: absolute;
    top: 0;
    right: -100%;
    width: 0px;
    overflow: hidden;
    will-change: right;
    -webkit-transition: right .2s cubic-bezier(.4,0,.2,1); 
    transition: right .2s cubic-bezier(.4,0,.2,1); 
    z-index: 200;
}
.Home-session.is-show, .Home-session.is-show.is-fixed {
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    

    will-change: right;
    -webkit-transition: right .2s cubic-bezier(.4,0,.2,1); 
    transition: right .2s cubic-bezier(.4,0,.2,1); 
}

.Home-footer {
    min-height: 400px;

    padding-bottom: 120px;
    margin-top: 100px;
    
    text-align: center;
    z-index: 10;
}
.Home-patchSection {
    padding: 20px;
    height: 100px;
    width: 100%;
    position: absolute;
    bottom: 0;
    background: rgb(230,230,230);
    border-top: 1px solid rgb(220,220,220);
}
@media screen and (min-width: 500px){
    .Home-cover {
        padding: 30px 0 0px 0;
    }
}
@media screen and (min-width: 768px){
    .Home-cover.is-hide {
        display: block;
    }
    .Home-AppBar.is-hide {
        display: block;
    }
    .Home-footer.is-hide {
        display: block;
    }
    .Home-coverNotice {
        text-align: center;
    }
    
}

@media screen and (min-width: 768px) and (max-width: 1236px){
    .Home-main {
        position: relative;
        height: auto;
        width: 100%;
    }
    .Home-filter {
        display: none;
    }

    .Home-schedule {
        display: inline-block;
        width: 50%;
        

        z-index: 10;
    }
    .Home-schedule.is-fixed, .Home-schedule.with-session {
        width: 50%;
        

        -webkit-transition: all .2s cubic-bezier(.4,0,.2,1); 
        transition: all .2s cubic-bezier(.4,0,.2,1); 
    }
    .Home-schedule.with-session.is-hide {
        display: inline-block;

    }
   
    .Home-sponsor, .Home-sponsor.is-hide {
        width: 50%;
        top: 0;
        position: absolute;
        
        left: 50%;
        
    }
    .Home-session {
        position: absolute;
        top: 0;
        right: -calc(50% - 30px);

        width: 0px;
        overflow: hidden;
        will-change: right;
        -webkit-transition: right .2s cubic-bezier(.4,0,.2,1); 
        transition: right .2s cubic-bezier(.4,0,.2,1); 
    }
    .Home-session.is-show {
        position: absolute;
        left: 50%;
        width: 50%;
        height: 100vh;
        overflow: scroll;
        will-change: right;
        -webkit-transition: right .2s cubic-bezier(.4,0,.2,1); 
        transition: right .2s cubic-bezier(.4,0,.2,1); 
    }
    .Home-session.is-show.is-fixed {
        height: 100vh;
        overflow: scroll;
        position: fixed;
        top: 0;
         width: 50%;
    }
   

}

@media screen and (min-width: 1237px){
	.Home-main {
        position: relative;
        height: auto;
    }
    .Home-filter {
    	margin-left: 120px;
    	width: 240px;
    	position: absolute;
        display: block;
    }
    .Home-filter.is-fixed {
    	position: fixed;
    	top: 0;
        left: 0;
    }
    .Home-filter.is-passed{
    	position: absolute;
    	/* top dynamically decided*/
    }
    .Home-schedule {
    	width: 550px;
    	margin-left: 360px;
        will-change: margin-left;
        /*-webkit-transition: margin-left .2s cubic-bezier(.4,0,.2,1); 
        transition: margin-left .2s cubic-bezier(.4,0,.2,1); */
        z-index: 10;
        margin-bottom: 200px;
    }
    .Home-schedule.is-fixed {
        width: 550px;
        margin-left: 360px;
        will-change: margin-left;
        -webkit-transition: all .2s cubic-bezier(.4,0,.2,1); 
        transition: all .2s cubic-bezier(.4,0,.2,1); 
    }
    .Home-schedule.with-session {
        width: 550px;
        margin-left: 160px;
        will-change: margin-left;
         -webkit-transition: all .2s cubic-bezier(.4,0,.2,1); 
        transition: all .2s cubic-bezier(.4,0,.2,1);
        
    }
    .Home-schedule.with-session.is-hide {
        display: inline-block;

    }
    .Home-sponsor, .Home-sponsor.is-hide {
        width: 280px;
        position: absolute;
        top: -0px;
        left: 950px;
        
    }
    .Home-session {
        position: absolute;
        top: 0;
        right: -570px;
        width: 0px;
        overflow: hidden;
        will-change: right;
        -webkit-transition: right .2s cubic-bezier(.4,0,.2,1); 
        transition: right .2s cubic-bezier(.4,0,.2,1); 
    }
    .Home-session.is-show {
        position: absolute;
        left: 711px;
        width: 570px;
        height: 100vh;
        overflow: scroll;
        will-change: right;
        -webkit-transition: right .2s cubic-bezier(.4,0,.2,1); 
        transition: right .2s cubic-bezier(.4,0,.2,1); 
    }
    .Home-session.is-show.is-fixed {
        height: 100vh;
        overflow: scroll;
        position: fixed;
        top: 0;
        width: 570px;
    }
    .Home-shadow.is-show {
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        height: calc(100% - 200px);
        width: 50%;
        z-index: 1;
        background: rgba(255,255,255,0.7);
        -webkit-transition: background .2s ease-in-out;
        transition: background .2s ease-in-out;
        cursor: pointer;
        pointer-events: all;
   }
    

}
.Home-patch, .Home-patch:visited {
    display: inline-block;
    text-decoration: none;
    padding: 20px 36px 0 0 ;
    color: rgb(153,155,154);
    font-size: 14px;
    font-family: 'Gentium Basic', Gentium, serif;
}
.Home-patch:hover {
    color: rgb(53,55,54);
}

